# eeg_seizure_classification

./: .gitignore  Makefile  README.md  pyproject.toml
reports/runs_dl/20260305_192625/: metrics_eegcnn.json  metrics_summary.csv  model_eegcnn_fold1.pt  model_eegcnn_fold2.pt  model_eegcnn_fold3.pt  run_config.json
reports/runs_dl/20260305_194416/: metrics_eegcnn.json  metrics_summary.csv  model_eegcnn_fold1.pt  model_eegcnn_fold2.pt  model_eegcnn_fold3.pt
scripts/: download_subset.sh  evaluate.py  prepare_data.py  prepare_tensor_data.py  train.py  train_dl.py
src/eeg_seizure/: __init__.py  chbmit.py  dl.py  features.py  modeling.py  utils.py
src/eeg_seizure_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
